<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Extroverts-Help</string>
    <string name="title_activity_maps">Map</string>
    <string name="matherantext">Matheran</string>
    <string name="descrpition">HISTORY:
    Matheran is a hill station and a municipal council in Karjat Tahsilin the Raigad district in the Indian state of Maharashtra. It is one of the smallest hill station in India, it is located on the Western Ghats range at an elevation of around 800 m (2,625 feet) above sea level. It is about 90 km from Mumbai, and 120 km from Pune. Matherans proximity to many metropolitan cities makes it a popular weekend getaway for urban residents.
    </string>
    <string name="matheran">Matheran</string>
    <string name="difficulty_level_moderate_to_difficult">DIFFICULTY LEVEL : MODERATE TO DIFFICULT</string>
    <string name="best_season_june_march_matheran">BEST SEASON : JUNE-MARCH</string>
    <string name="rajmachi">Rajmachi</string>
    <string name="best_season_june_march_rajmachi">BEST SEASON : JUNE-MARCH</string>
    <string name="DescriptionRajmachi">Rajmachi Fort (Killa) is one of the many historical forts in the rugged hills of Sahyadri mountains (Western Ghats). It consists of two twin fortresses Shriwardhan Ballekilla and Manaranjan Balekilla, with a wide machi (plateau) surrounding the two Balekillas. Udhewadi is a small village of about 22 houses situated on the machi, at the southern foot of Manaranjan Balekilla of Rajmachi Fort.The fort played a strategic role in the First Anglo-Maratha War.
    </string>
    <string name="difficulty_level_moderate_to_difficult_RAJMACHII">DIFFICULTY LEVEL : MODERATE TO DIFFICULT</string>
    <string name="sanjay_gandhi_national_park">Sanjay Gandhi National Park</string>
    <string name="difficulty_level_easy_to_difficult">Difficulty level : Easy to Difficult</string>
    <string name="descriptionsgnp">History:
        Sanjay Gandhi National Park is an 87 km2 (34 sq mi) protected area near Mumbai in Maharashtra State in India.It was formerly known as Borivali National Park.It is notable as one of the major national parks existing within a metropolis limit and is one of the most visited parks in the world.The rich flora and fauna of Sanjay Gandhi National Park attracts more than 2 million visitors every year.</string>
    <string name="best_season_full_year_sgnp">BEST SEASON : FULL YEAR</string>
    <string name="todo">TODO</string>
    <string name="descriptionlonavala">HISTORY:
    Lonavala or Lonavla (Marathi: लोणावळा is a town and a hill station Municipal Council in Pune district in the Indian State of Maharashtra.It is about 64 kilometres (40 mi) west of modern-day Pune city and 96 kilometres (60 mi) from the city of Mumbai. It is known for its production of the hard candy chikki and is also a major stop on the railway line connecting Mumbai and Pune.
   </string>
    <string name="lonavala">Lonavala</string>
    <string name="difficulty_level_moderate_to_difficult_lonavala">DIFFICULTY LEVEL : MODERATE TO DIFFICULT</string>
    <string name="best_season_june_to_march_lonavala">BEST SEASON : JUNE TO MARCH</string>
    <string name="imglonavala">TODO</string>
    <string name="descriptionraireshwar">History:
    Raireshwar is situated in Bhor Taluka near Pune, India, 82 km away. It is situated in between various hills and forts such as Kenjalgad.
In the Maratha age it was a significant fort (of Bhor State?) The places worth visiting at Raireshwar are Raireshwar Mandir, Gomukh Lake, Nakhinda (also known as Aswal Lake) and Pandavleni.
    </string>
    <string name="difficulty_level_easy_to_moderate_raireshwar">DIFFICULTY LEVEL : EASY TO MODERATE</string>
    <string name="best_season_june_to_march_raireshwar">BEST SEASON : JUNE TO MARCH</string>
    <string name="raireshwar">Raireshwar</string>
    <string name="imgrai">TODO</string>
    <string name="lohagad">Lohagad</string>
    <string name="best_season_june_to_march">BEST SEASON : JUNE TO MARCH</string>
    <string name="difficulty_level_easy_to_moderate">DIFFICULTY LEVEL : EASY TO MODERATE</string>
    <string name="Descriptionlohagad">HISTORY:
Lohagad (iron fort) is one of the many hill forts of Maharashtra state in India. Situated close to the hill station Lonavala and 52 km (32 mi) northwest of Pune, Lohagad rises to an elevation of 1,033 m (3,389 ft) above sea level. The fort is connected to the neighboring Visapur fort by a small range. The fort was under the Maratha empire for the majority of the time, with a short period of 5 years under the Mughal empire.
</string>
    <string name="Lohagad">TODO</string>
    <string name="best_time_to_visit">Best time to visit</string>
    <string name="blonavala">Lonavala</string>
    <string name="bmatheran">Matheran</string>
    <string name="braireshwar">Raireshwar</string>
    <string name="blohagad">Lohagad</string>
    <string name="brajmachi">Rajmachi</string>
    <string name="bsanjay_gandhi_national_park">Sanjay Gandhi National Park</string>
    <string name="Lonavalaimg">TODO</string>
    <string name="lonavalaimg">TODO</string>
    <string name="raireshwarimg">TODO</string>
    <string name="rajmachiimg">TODO</string>
    <string name="lohagadimg">TODO</string>
    <string name="sgnpimg">TODO</string>
    <string name="select_season">Select Season</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="rainy">Rainy</string>
    <string name="winter_season">Winter Season</string>
    <string name="summer_season">Summer Season</string>
    <string name="rainy_season">Rainy Season</string>
    <string name="best_time_december_to_feburary_bmat">Best time :December to Feburary</string>
    <string name="best_time_to_start_8_30am_bmat">Best time to start - 8:30AM</string>
    <string name="best_time_to_leave_2pm_bmat">Best time to leave :2PM</string>
    <string name="best_time_for_lunch_between_12pm_2pm_bmat">Best time for lunch : Between 12pm-2pm</string>
    <string name="golden_time_to_click_pics_morning_6_57_7_43_evening_18_30_18_39_bwmat">Golden time to click pics : Morning 6:57-7:43 Evening 18:30-18:39</string>
    <string name="best_time_march_may_bsmat">Best time: March-May</string>
    <string name="best_time_to_start_7_00_am_bsmat">Best time to start - 7:00 AM</string>
    <string name="best_time_to_leave_11am_bsmat">Best time to leave : 11AM</string>
    <string name="best_time_for_lunch_13_00_bsmat">Best time for lunch - 13:00</string>
    <string name="golden_time_to_click_pics_morning_6_10_6_53_evening_18_23_19_06_bsmat">Golden time to click pics : Morning 6:10-6:53 Evening 18:23-19:06</string>
    <string name="best_time_june_to_september_bwmat">Best time : June to September</string>
    <string name="best_time_to_start_8am_bwmat">Best time to start :8AM</string>
    <string name="best_time_for_lunch_13_00_bwmat">Best time for lunch - 13:00</string>
    <string name="golden_time_to_click_pics_morning_5_51_6_37_evening_18_47_19_33_bwmat">Golden time to click pics : Morning 5:51-6:37 Evening 18:47-19:33</string>
    <string name="best_time_to_leave_13_00_bwmat">Best time to leave - 13:00</string>
    <string name="mat">TODO</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigate_d">NavigateD</string>
    <string name="title_activity_nav_draw">NavDraw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="time">TODO</string>
    <string name="map">TODO</string>
    <string name="cardio">TODO</string>
    <string name="help">TODO</string>
    <string name="best_time_december_to_feburary_wsgnp">Best time :December to Feburary</string>
    <string name="best_time_to_start_8_00am_wsgnp">Best time to start - 8:00AM</string>
    <string name="best_time_to_leave_3pm_wsgnp">Best time to leave :3PM</string>
    <string name="best_time_for_lunch_between_12pm_2pm_wsgnp">Best time for lunch : Between 12pm-2pm</string>
    <string name="golden_time_to_click_pics_morning_5_55_6_40_evening_18_33_19_43_wsgnp">Golden time to click pics : Morning 5:55-6:40 Evening 18:33-19:43</string>
    <string name="summer_season_ssgnp">Summer Season</string>
    <string name="best_time_march_to_may_ssgnp">Best time :March to May</string>
    <string name="best_time_to_start_8_00am_ssgnp">Best time to start - 8:00AM</string>
    <string name="best_time_to_leave_3pm_ssgnp">Best time to leave :3PM</string>
    <string name="best_time_for_lunch_between_12pm_2pm_ssgnp">Best time for lunch : Between 12pm-2pm</string>
    <string name="golden_time_to_click_pics_morning_6_11_6_53_evening_18_25_19_08_ssgnp">Golden time to click pics :Morning 6:11-6:53 Evening 18:25-19:08</string>
    <string name="rainy_season_rsgnp">Rainy Season</string>
    <string name="best_time_june_september_rsgnp">Best time : June-September</string>
    <string name="best_time_to_start_8_00_am_rsgnp">Best time to start - 8:00 AM</string>
    <string name="best_time_to_leave_3pm_rsgnp">Best time to leave :3PM</string>
    <string name="golden_time_to_click_pics_morning_6_05_6_49_evening_18_36_19_20_rsgnp">Golden time to click pics :Morning 6:05-6:49 Evening 18:36-19:20</string>
    <string name="best_time_for_lunch_between_12pm_2pm_rsgnp">Best time for lunch : Between 12pm-2pm</string>
    <string name="best_time_december_to_feburary_wrai">Best time :December to Feburary</string>
    <string name="best_time_to_start_8_30am_wrai">Best time to start - 8:30AM</string>
    <string name="best_time_to_leave_2pm_wrai">Best time to leave :2PM</string>
    <string name="best_time_for_lunch_between_12pm_2pm_wrai">Best time for lunch : Between 12pm-2pm</string>
    <string name="golden_time_to_click_pics_morning_6_43_7_29_evening_17_29_18_15_wrai">Golden time to click pics :Morning 6:43-7:29 Evening 17:29-18:15</string>
    <string name="summer_season_srai">Summer Season</string>
    <string name="best_time_to_start_8_30_am_srai">Best time to start : 8:30 AM</string>
    <string name="best_time_for_lunch_between_12pm_2pm_srai">Best time for lunch : Between 12pm-2pm</string>
    <string name="golden_time_to_click_pics_morning_6_03_6_46_evening_18_23_19_06_srai">Golden time to click pics : Morning 6:03-6:46 Evening 18:23-19:06</string>
    <string name="rainy_season_rrai">Rainy Season</string>
    <string name="best_time_to_leave_2pm_rrai">Best time to leave :2PM</string>
    <string name="golden_time_to_click_pics_morning_6_03_6_46_evening_18_32_19_16_rrai">Golden time to click pics :Morning 6:03-6:46 Evening 18:32-19:16</string>
    <string name="best_time_for_lunch_between_12pm_2pm_rrai">Best time for lunch : Between 12pm-2pm</string>
    <string name="price">PRICE</string>
    <string name="quantity">quantity</string>
    <string name="ADD">+</string>
    <string name="initial_quantity_value">initial quantity value</string>
    <string name="total">TOTAL</string>
    <string name="SUB">-</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="switch1">switch</string>
    <string name="place_name">Place Name</string>
    <string name="route">Route</string>
    <string name="expenditure">Expenditure</string>
    <string name="select_image">selectimage</string>
    <string name="save_image_in_db">saveimgindb</string>
    <string name="select_an_image_and_save_in_db">selectimgandsaveindb</string>
    <string name="load_image">Load Image</string>
</resources>