<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadAct">

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/select_image" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_above="@+id/btnLoadImage"
        android:layout_below="@+id/btnSelectImage"
        android:layout_marginBottom="85dp" />

    <Button
        android:id="@+id/btnSaveImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="257dp"
        android:layout_marginBottom="5dp"
        android:text="@string/save_image_in_db" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/loadedImg"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_alignTop="@+id/imgView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/btnLoadImage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="5dp"
        android:text="@string/load_image" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/select_an_image_and_save_in_db"
        android:textSize="20sp" />

</RelativeLayout>